downgrade project to Java-17